# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: py_ci.yml
brain_games/: engine.py
brain_games/engine/: engine.py
brain_games/games/: calc.py  engine.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli_utils.py  even_game.py  game.py
brain_games/scripts/games/: calc.py  even.py  gcd.py  prime.py  progression.py
